# to-compiler

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  build.ps1  conanfile.txt  dep1.tor  dep2.tor  depcas1.tor  example.tor  run.ps1  run.sh  test.txt
example/: example.tor
example/dependencies/: dep1.tor  dep2.tor  depcas1.tor  depcas2.tor
includes/: logger.h  main.h  preprocessor.h  utility.h
src/: logger.cpp  main.cpp  preprocessor.cpp  utility.cpp
